--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -6,7 +6,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.tikalk</groupId>
+	<groupId>tv.bee</groupId>
 	<artifactId>jdbcc</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
