--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -13,8 +13,14 @@
 
 	<name>JDBC console</name>
 
-	<!-- ToDo: complete developers list -->
-	<developers/>
+	<developers>
+		<developer>
+			<email>skibaa@gmail.com</email>
+			<name>Andrew Skiba</name>
+			<organization>Tikal Knowledge</organization>
+			<organizationUrl>http://tikalk.com</organizationUrl>
+		</developer>
+	</developers>
 
 	<repositories>
 		<repository>
@@ -34,47 +40,8 @@
 		</pluginRepository>
 	</pluginRepositories>
 
-	<dependencyManagement>
-		<dependencies>
-			<!-- Logging -->
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>1.4.3</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>1.4.3</version>
-			</dependency>
-			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>1.2.14</version>
-			</dependency>
-
-			<!-- JEE -->
-			<dependency>
-				<groupId>javax.ejb</groupId>
-				<artifactId>ejb-api</artifactId>
-				<version>3.0</version>
-			</dependency>
-			<dependency>
-				<groupId>javax.persistence</groupId>
-				<artifactId>persistence-api</artifactId>
-				<version>1.0</version>
-			</dependency>
-			<dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>servlet-api</artifactId>
-				<version>2.5</version>
-			</dependency>
-			<dependency>
-				<groupId>javax.ws.rs</groupId>
-				<artifactId>jsr311-api</artifactId>
-				<version>0.8</version>
-			</dependency>
-			<dependency>
+	<dependencies>
+		<dependency>
 				<groupId>com.thoughtworks.xstream</groupId>
 				<artifactId>xstream</artifactId>
 				<version>1.3</version>
@@ -84,111 +51,17 @@
 				<artifactId>commons-lang</artifactId>
 				<version>2.4</version>
 			</dependency>
-
-			<!-- JAX-RS (JSR 311) -->
-			<dependency>
-				<groupId>com.sun.jersey</groupId>
-				<artifactId>jersey</artifactId>
-				<version>0.8-ea</version>
-			</dependency>
-
-			<!-- Other -->
-			<dependency>
-				<groupId>org.json</groupId>
-				<artifactId>json</artifactId>
-				<version>20080701</version>
-			</dependency>
-			<dependency>
-				<groupId>com.thoughtworks.xstream</groupId>
-				<artifactId>xstream</artifactId>
-				<version>1.3</version>
-			</dependency>
-
 			<!-- Testing -->
-			<dependency>
-				<groupId>org.jboss.embedded</groupId>
-				<artifactId>hibernate-all</artifactId>
-				<version>beta2</version>
-			</dependency>
-			<dependency>
-				<groupId>org.jboss.embedded</groupId>
-				<artifactId>jboss-embedded-all</artifactId>
-				<version>beta2</version>
-			</dependency>
-			<dependency>
-				<groupId>org.jboss.embedded</groupId>
-				<artifactId>thirdparty-all</artifactId>
-				<version>beta2</version>
-			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.4</version>
 			</dependency>
 			<dependency>
-				<groupId>org.dbunit</groupId>
-				<artifactId>dbunit</artifactId>
-				<version>2.2.3</version>
-			</dependency>
-			<dependency>
 				<groupId>hsqldb</groupId>
 				<artifactId>hsqldb</artifactId>
 				<version>1.8.0.7</version>
 			</dependency>
-		</dependencies>
-	</dependencyManagement>
-
-	<dependencies>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.dbunit</groupId>
-			<artifactId>dbunit</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.thoughtworks.xstream</groupId>
-			<artifactId>xstream</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.4</version>
-		</dependency>
-
-		<!--
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<classifier>jdk15</classifier>
-			<version>5.7</version>
-			<scope>test</scope>
-		</dependency>
--->
 	</dependencies>
 
 
@@ -200,9 +73,6 @@
 				<artifactId>maven-jar-plugin</artifactId>
 				<configuration>
 					<archive>
-						<!--manifestEntries>
-	<class-path>dt-ejb.jar</class-path>
-</manifestEntries-->
 						<manifest>
 							<main-class>tv.bee.jdbcc.Main</main-class>
 						</manifest>
