--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -62,6 +62,21 @@
 				<artifactId>hsqldb</artifactId>
 				<version>1.8.0.7</version>
 			</dependency>
+			<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <version>1.0.20070617</version>
+</dependency>
+		<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.6</version>
+</dependency>
+		<dependency>
+    <groupId>postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>8.3-603.jdbc3</version>
+</dependency>
 	</dependencies>
 
 
