--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -8,7 +8,7 @@
 
 	<groupId>tv.bee</groupId>
 	<artifactId>jdbcc</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>JDBC console</name>
