fixed inconsistencies between the help text and actual parameters, deleted test for help message - makes too much noise

--- a/src/main/resources/BadArgsErrorTypes.properties
+++ b/src/main/resources/BadArgsErrorTypes.properties
@@ -24,10 +24,10 @@ NO_ARGS=Usage: jdbcc {<Option>=<Value>}* {<SQL script>|-}\n\
   \tjdbcc script.sql\n\
   \t    read settings from $HOME/.jdbcc and execute SQL from file\n\
   \n\
-  \tjdbcc -s settings.props script.sql\n\
-  \t    read settings from settings.props and execute SQL from file\n\
+  \tjdbcc -s oracle1.jdbcc script.sql\n\
+  \t    read settings from oracle1.jdbcc and execute SQL from file\n\
   \n\
-  \tjdbcc -c jdbc:h2:test -u sa -p sa -d org.h2.Driver -e script.sql\n\
+  \tjdbcc -url jdbc:h2:test -user sa -passwd sa -driver org.h2.Driver -recover script.sql\n\
   \t    use connection settings from comand line, don't stop on errors and execute script.sql
 
 EXTRA_ARGS=A single file name or '-' for interactive input is expected, got: "%s"
