--- a/trunk/src/main/resources/BadArgsErrorTypes.properties
+++ b/trunk/src/main/resources/BadArgsErrorTypes.properties
@@ -3,7 +3,15 @@
 # Author Andrew Skiba <andrew@tikalk.com>
 # 
 
-NO_ARGS=Usage: jdbcc {<Option>=<Value>}* {<SQL script>|-}\n\
+NO_ARGS=WARNING: no input script is given on command line. Entering interactive mode.\n\
+  To suppress this warning use minus (-) instead of the input script file name.\n\
+  For the list of available options run:\n\
+  \n\
+  jdbcc -help\n\
+  \n\
+  To quit use <ctrl-D> on *nix or <ctrl-Z><Enter> on Windows.\n
+
+HELP=Usage: jdbcc {<Option>=<Value>}* {<SQL script>|-}\n\
   \n\
   \t-               interactive mode\n\
   \t<SQL script>    file with SQL commands separated by semicolons\n\
