--- a/trunk/src/main/resources/BadArgsErrorTypes.properties
+++ b/trunk/src/main/resources/BadArgsErrorTypes.properties
@@ -2,6 +2,7 @@
 # Copyright 2008 by BeeTV http://bee.tv
 # Author Andrew Skiba <andrew@tikalk.com>
 # 
+IO_ERROR=Error reading file: %s
 
 NO_ARGS=WARNING: no input script is given on command line. Entering interactive mode.\n\
   To suppress this warning use minus (-) instead of the input script file name.\n\
