--- a/trunk/src/main/resources/BadArgsErrorTypes.properties
+++ b/trunk/src/main/resources/BadArgsErrorTypes.properties
@@ -18,13 +18,18 @@ HELP=Usage: jdbcc {<Option>=<Value>}* {<SQL script>|-}\n\
   \t<SQL script>    file with SQL commands separated by semicolons\n\
   \n\
   Options:\n\
+    \t-recover report errors and continue (default in interactive mode)\n\
+    \t-strict  report the first error and exit (default in non-interactive mode)\n\
+    \t-help    this message\n\
+  \n\
+  Options with and additional parameter:\n\
+  \n\
     \t-url     connection URL\n\
     \t-user    username\n\
     \t-passwd  password\n\
     \t-driver  driver class name\n\
     \t-config  read settings from file\n\
-    \t-recover report errors and continue (default in interactive mode)\n\
-    \t-strict  report the first error and exit (default in non-interactive mode)\n\
+    \t-delim   case insensitive delimiter between SQL commands (one or many)\n\
   \n\
   Examples:\n\
   \tjdbcc -\n\
@@ -37,6 +42,9 @@ HELP=Usage: jdbcc {<Option>=<Value>}* {<SQL script>|-}\n\
   \t    read settings from oracle1.jdbcc and execute SQL from file\n\
   \n\
   \tjdbcc -url jdbc:h2:test -user sa -passwd sa -driver org.h2.Driver -recover script.sql\n\
+  \t    use connection settings from comand line, don't stop on errors and execute script.sql\
+  \n\
+  \tjdbcc -delim go -delim run -url jdbc:h2:test -user sa -passwd sa -driver org.h2.Driver -recover script.sql\n\
   \t    use connection settings from comand line, don't stop on errors and execute script.sql
 
 EXTRA_ARGS=A single file name or '-' for interactive input is expected, got: "%s"
