--- a/trunk/src/main/resources/BadArgsErrorTypes.properties
+++ b/trunk/src/main/resources/BadArgsErrorTypes.properties
@@ -30,6 +30,7 @@ HELP=Usage: jdbcc {<Option>=<Value>}* {<SQL script>|-}\n\
     \t-driver  driver class name\n\
     \t-config  read settings from file\n\
     \t-delim   case insensitive delimiter between SQL commands (one or many)\n\
+    \t-rem     case insensitive string starting remark (one or many)
   \n\
   Examples:\n\
   \tjdbcc -\n\
@@ -44,8 +45,9 @@ HELP=Usage: jdbcc {<Option>=<Value>}* {<SQL script>|-}\n\
   \tjdbcc -url jdbc:h2:test -user sa -passwd sa -driver org.h2.Driver -recover script.sql\n\
   \t    use connection settings from comand line, don't stop on errors and execute script.sql\
   \n\
-  \tjdbcc -delim go -delim run -url jdbc:h2:test -user sa -passwd sa -driver org.h2.Driver -recover script.sql\n\
-  \t    use connection settings from comand line, don't stop on errors and execute script.sql
+  \tjdbcc -delim go -delim run -url -rem rem -rem -- jdbc:h2:test -driver org.h2.Driver -recover script.sql\n\
+  \t    use delimiters and connection settings from comand line, don't stop on errors and execute script.sql. REM and --\n\
+  \t    will begin a comment.
 
 EXTRA_ARGS=A single file name or '-' for interactive input is expected, got: "%s"
 
