--- a/trunk/src/main/resources/BadArgsErrorTypes.properties
+++ b/trunk/src/main/resources/BadArgsErrorTypes.properties
@@ -20,6 +20,7 @@ HELP=Usage: jdbcc {<Option>=<Value>}* {<SQL script>|-}\n\
   Options:\n\
     \t-recover report errors and continue (default in interactive mode)\n\
     \t-strict  report the first error and exit (default in non-interactive mode)\n\
+    \t-verbose print the SQL and the result of the execution in non-interactive mode\n\
     \t-help    this message\n\
   \n\
   Options with and additional parameter:\n\
@@ -39,13 +40,13 @@ HELP=Usage: jdbcc {<Option>=<Value>}* {<SQL script>|-}\n\
   \tjdbcc script.sql\n\
   \t    read settings from $HOME/.jdbcc and execute SQL from file\n\
   \n\
-  \tjdbcc -s oracle1.jdbcc script.sql\n\
+  \tjdbcc -config oracle1.jdbcc script.sql\n\
   \t    read settings from oracle1.jdbcc and execute SQL from file\n\
   \n\
   \tjdbcc -url jdbc:h2:test -user sa -passwd sa -driver org.h2.Driver -recover script.sql\n\
   \t    use connection settings from comand line, don't stop on errors and execute script.sql\
   \n\
-  \tjdbcc -delim go -delim run -url -rem rem -rem -- jdbc:h2:test -driver org.h2.Driver -recover script.sql\n\
+  \tjdbcc -delim \bgo\b -rem ^rem.* -rem --.* -url jdbc:h2:test -driver org.h2.Driver -recover script.sql\n\
   \t    use delimiters and connection settings from comand line, don't stop on errors and execute script.sql. REM and --\n\
   \t    will begin a comment.
 
